cluster/kubernetes/observability/kube-prometheus-stack/ingress/alertmanager-http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  namespace: observability
spec:
  parentRefs:
    - name: internal-gateway
      namespace: network
      sectionName: alertmanager
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: kube-prometheus-stack-alertmanager
          port: 9093
