cluster/kubernetes/observability/kube-prometheus-stack/ingress/prometheus-http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: observability
spec:
  parentRefs:
    - name: internal-gateway
      namespace: network
      sectionName: prometheus
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
